make Twitter4J Java 8 compatible again